Turn JVM GC to try to prevent GC stalling